# prisma-query-engine

./: Cargo.toml  README.md
example/: Cargo.toml
example/prisma/: dev.db  schema.prisma
example/src/: main.rs
src/: error.rs  lib.rs
