[package]
name = "prisma-query-engine"
version = "0.2.0"
authors = ["Alaa Rihan <alaa.addeen@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["lib"]

[features]
vendored-openssl = ["sql-connector/vendored-openssl"]

[dependencies]
query-core = { git = "https://github.com/prisma/prisma-engines", branch = "main" }
request-handlers = { git = "https://github.com/prisma/prisma-engines", branch = "main" }
query-connector = { git = "https://github.com/prisma/prisma-engines", branch = "main" }
user-facing-errors = {git = "https://github.com/prisma/prisma-engines", branch = "main"}
prisma-models = { git = "https://github.com/prisma/prisma-engines", branch = "main" }
datamodel = { git = "https://github.com/prisma/prisma-engines", branch = "main" }
datamodel-connector = { git = "https://github.com/prisma/prisma-engines", branch = "main"  }
sql-connector = { git = "https://github.com/prisma/prisma-engines", branch = "main", package = "sql-query-connector" }
thiserror = "1"
connection-string = "0.1"
url = "2"
serde_json = { version = "1", features = ["preserve_order", "float_roundtrip"] }
serde = "1"
tokio = { version = "1", features = ["sync"] }
